# src/XtremeIdiots.Portal.Integrations.Servers.Abstractions.V1/Models/V1/Rcon/ChangeMapRequest.cs
@@ -1,0 +1,7 @@
+namespace XtremeIdiots.Portal.Integrations.Servers.Abstractions.Models.V1.Rcon
+{
+    public record ChangeMapRequest
+    {
+        public required string MapName { get; init; }
+    }
+}
