# src/XtremeIdiots.Portal.Integrations.Servers.Abstractions.V1/Models/V1/Rcon/PlayerNameRequest.cs
@@ -1,0 +1,7 @@
+namespace XtremeIdiots.Portal.Integrations.Servers.Abstractions.Models.V1.Rcon
+{
+    public record PlayerNameRequest
+    {
+        public required string Name { get; init; }
+    }
+}
