# src/XtremeIdiots.Portal.Integrations.Servers.Abstractions.V1/Models/V1/Rcon/TellPlayerRequest.cs
@@ -1,0 +1,7 @@
+namespace XtremeIdiots.Portal.Integrations.Servers.Abstractions.Models.V1.Rcon
+{
+    public record TellPlayerRequest
+    {
+        public required string Message { get; init; }
+    }
+}
